fix: center-right align settings icons for plans/repos

--- a/webui/src/index.sass
+++ b/webui/src/index.sass
@@ -21,3 +21,9 @@ pre
 
 .visible-on-hover:hover .hidden-child
   visibility: visible
+
+.float-center-right
+  position: absolute
+  right: 0px
+  top: "50%"
+  transform: "translateY(-50%)"
